2007-11-03  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-contact-widget.c:
	* libempathy-gtk/empathy-avatar-chooser.c:
	* libempathy-gtk/empathy-avatar-chooser.h:
	* python/pyempathy/pyempathy.defs:
	* libempathy/empathy-contact-factory.c:
	* libempathy/empathy-contact-factory.h: Rename
	empathy_contact_factory_set_name() to _set_alias(). Implements
	empathy_contact_factory_set_avatar(). Return the mime_type in
	empathy_avatar_chooser_get_image_data().

2007-11-03  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-main-window.c: Unref contact returned by
	empathy_contact_factory_get_user().

2007-11-03  Xavier Claessens  <xclaesse@gmail.com>

	* src/empathy.c: Make use of gtk_init_with_args for command line
	parsing. Fixes bug #491985 (Basilio Kublik).

2007-11-03  Xavier Claessens  <xclaesse@gmail.com>

	* data/icons/hicolor_status_scalable_empathy-pending.svg:
	* data/icons/hicolor_status_16x16_empathy-pending.svg:
	* data/icons/hicolor_status_scalable_empathy-extended-away.svg:
	* data/icons/hicolor_status_16x16_empathy-extended-away.svg:
	* data/icons/hicolor_status_scalable_empathy-away.svg:
	* data/icons/hicolor_status_16x16_empathy-away.svg:
	* data/icons/hicolor_status_scalable_empathy-offline.svg:
	* data/icons/hicolor_status_16x16_empathy-offline.svg:
	* data/icons/hicolor_status_scalable_empathy-busy.svg:
	* data/icons/hicolor_status_16x16_empathy-busy.svg:
	* data/icons/hicolor_status_scalable_empathy-available.svg:
	* data/icons/hicolor_status_16x16_empathy-available.svg:
	* data/icons/Makefile.am: Install SVG status images as scalable.
	Fixes bug #492984.

2007-11-03  Xavier Claessens  <xclaesse@gmail.com>

	* configure.ac: Bump version to 0.21.2.

2007-10-28  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-contact-list-view.c:
	* libempathy-gtk/empathy-contact-list-store.c:
	* libempathy-gtk/empathy-contact-list-store.h:
	* doc/libempathy-gtk/libempathy-gtk.types: